tests/TestDeca/version1.1/src/test/deca/syntax/invalid/provided/simple_lex.deca
// Description:
//    tests de programme lexicalement correct.
//
// Resultats:
//    Ligne 11 : Erreur de syntaxe.
//    test_lex ne doit pas donner d'erreur.
//
// Historique:
//    cree le 01/01/2025


println     protected

;
readInt



return


// un commentaire.
